Changelog
=========

3.0.2 - unreleased
------------------


3.0.1 - 2010-10-27
------------------

- Fixed template with chameleon incompatibility.
  [swampmonkey]

3.0 - 2010-07-18
----------------

- No changes.

3.0a1 - 2009-11-13
------------------

- Adjust this package's FSPythonScript subclass to reflect cleanup in Zope2
  and CMF.
  [davisagli]

- Silence more warnings for calling `manage_*` methods.
  [hannosch]

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

- Cleaned up package metadata.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Correct license in egg metadata.
  [wichert]

- Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  [elro]

2.1.2 - 2008-03-26
------------------

- Added metadata.xml to GenericSetup profile.
  [hannosch]

2.1.1 - 2007-10-07
------------------

- Removed two __traceback_info__'s from ControllerBase which where both
  causing too much speed cost and optimized some Acquisition handling.
  [hannosch]

- Fixed #7027 : ControllerState.__str__ loaded files in memory
  [zegor]

- Made tests pass without Plone being installed.
  [hannosch]

2.1 - 2007-08-09
----------------

- No changes.
  [hannosch]

2.1rc1 - 2007-07-09
-------------------

- Removed utility registration - the formcontroller tool uses self.REQUEST
  which is not available in utilities.
  [wichert]

2.1b4 - 2007-05-05
------------------

- Removed five:registerPackage again, as it is causing problems in ZEO
  environments.
  [hannosch]

2.1b3 - 2007-05-01
------------------

- Back to getToolByName we go.
  [wichert]

2.1b2 - 2007-03-23
------------------

- Converted installation code to be based on a GenericSetup extension
  profile.
  [hannosch]

- Let the form controller tool implement and interface and added a bbb
  registerToolInterface call.
  [hannosch]

- Replaced getToolByName by getUtility calls.
  [hannosch]

2.1b1 - 2007-03-05